---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: ????
  Compatibility:
    - Added compatibility for Pyanodons Hard Mode
  Commands:
    - Added a debug command for recursively seeking through invalid items in hopes of finding the cause
      Currently not that helpful due to it searching *every* recipe. It's better to just do it manually :(
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2024-06-26
  Bugfixes:
    - Nullius now has injected recipes to match the asteroid mining drones.
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2024-06-26
  Bugfixes:
    - ACTUALLY TEST THE NEW SETTING :facepalm:
    - Actually add locale for new setting
    - Actually recalculate when new setting is changed
    - Reprocess data when new setting is changed
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2024-06-26
  Features:
    - Added setting to disable considering autplace controls. Now mods that have higher tier resources on other surfaces can kind of work. 
  Compatibility:
    - Added compatibility for Nullius
  Bugfixes:
    - Removed a crash with processing autoplace
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2024-06-12
  Compatibility:
    - Added compatibility for SimpleSeablock. Stone and Coal still are base resources due to rocks still getting autoplaced, but that's not easy to fix.
  Bugfixes:
    - No longer considers resources disabled during map creation as available
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2024-06-05
  Compatibility:
    - PyAE's Guano problem is mostly fixed
  Changes: